--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "@types/node": "^22.14.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "axios": "^1.9.0",
     "react-icons": "^5.5.0"
   }
 }
