--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "flask-pymongo>=3.0.1",
     "flask-talisman>=1.1.0",
     "flask-wtf>=1.2.2",
+    "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
+    "pydantic-settings>=2.9.1",
+    "pydantic[email]>=2.11.4",
     "pymongo>=4.12.1",
     "python-dotenv>=1.1.0",
     "python-jose[cryptography]>=3.4.0",
