trying to get async working + a few more error (not implementability list not working, upvote count not update, date not showing)

--- a/papers2code_app2/requirements.txt
+++ b/papers2code_app2/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn[standard]
 python-jose[cryptography]
-pymongo
+pymongo[srv,tls]>=4.0 # Ensures support for async and includes bson
 passlib[bcrypt]
 pydantic[email]
 requests
