--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
