data cleaning, implementation (will be changed) + using gpt 4.1 to label 2k datapoints or so, then use BERT to filter out (code will come later) the 400k datapoints + Implementability visualization workss now although very weird and will need to be changed (I think using the github progress.md will do better than rn) + some changes to DB to allow for user /me actions (p1)  --> tracking when starting.joining implementability

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Environment variables
+.env
+.env.local
+.env.production
+.env.test
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -135,6 +141,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.vscodeignore
 
 # Spyder project settings
 .spyderproject
