--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.1.1",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
+    "fontawesome": "^5.6.3",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
