--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "flask-pymongo>=3.0.1",
     "flask-talisman>=1.1.0",
     "flask-wtf>=1.2.2",
+    "gradio>=5.32.1",
     "httpx>=0.28.1",
+    "openai>=1.84.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.9.1",
     "pydantic[email]>=2.11.4",
