--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "devDependencies": {
-    "@types/node": "^22.14.1"
+    "@eslint/js": "^9.28.0",
+    "@types/node": "^22.14.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -10,9 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.1.0",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "framer-motion": "^12.16.0",
+    "lucide-react": "^0.513.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1"
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.6.1",
+    "three": "^0.177.0"
   }
 }
