--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "flask-wtf>=1.2.2",
     "gradio>=5.32.1",
     "httpx>=0.28.1",
+    "jwt>=1.3.1",
     "openai>=1.84.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.9.1",
