--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "flask-pymongo>=3.0.1",
     "flask-talisman>=1.1.0",
     "flask-wtf>=1.2.2",
+    "google>=3.0.0",
+    "google-genai>=1.20.0",
     "gradio>=5.32.1",
     "httpx>=0.28.1",
     "jwt>=1.3.1",
