--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "python-jose[cryptography]>=3.4.0",
     "requests>=2.32.3",
+    "schedule>=1.2.2",
     "slowapi>=0.1.9",
     "uvicorn[standard]>=0.34.2",
     "waitress>=3.0.2",
