--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -21,10 +21,13 @@
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
     "fontawesome": "^5.6.3",
+    "framer-motion": "^12.19.2",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.30.0",
     "reactflow": "^11.11.4"
   },
