--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "jwt>=1.3.1",
     "openai>=1.84.0",
     "passlib[bcrypt]>=1.7.4",
+    "polars>=1.0.0",
     "pydantic-settings>=2.9.1",
     "pydantic[email]>=2.11.4",
     "pymongo>=4.12.1",
