trying to combine UI p1 (adding components, trying to figure out packages)

--- a/papers2code-ui/tsconfig.json
+++ b/papers2code-ui/tsconfig.json
@@ -5,6 +5,15 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "jsx": "react" // or "react-jsx" if you're using React 17 or higher
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "noImplicitAny": false,
+    "noUnusedParameters": false,
+    "skipLibCheck": true,
+    "allowJs": true,
+    "noUnusedLocals": false,
+    "strictNullChecks": false
   }
 }
