--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.30.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
