--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -18,11 +18,16 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.5",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "fontawesome": "^5.6.3",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
