--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -35,6 +35,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.30.0",
     "reactflow": "^11.11.4",
+    "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
