--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,9 @@ services:
     env: python
     buildCommand: uv sync --frozen && uv cache prune --ci
     startCommand: uv run run.py
+    healthCheckPath: /health
+    autoDeploy: true
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11
 
