--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "cd papers2code-ui && pnpm install && pnpm run build",
+  "outputDirectory": "papers2code-ui/dist",
   "rewrites": [
     {
       "source": "/(.*)",
