trying to fix again

--- a/papers2code-ui/.npmrc
+++ b/papers2code-ui/.npmrc
@@ -2,13 +2,18 @@
 auto-install-peers=true
 strict-peer-dependencies=false
 
-# Better caching
-store-dir=~/.pnpm-store
-
 # Prevent OOM in CI/CD
-fetch-retries=3
+fetch-retries=5
 fetch-retry-mintimeout=10000
 fetch-retry-maxtimeout=60000
 
-# Network stability
-network-concurrency=3
+# Network stability for Vercel
+network-concurrency=16
+fetch-timeout=60000
+
+# Use public registry explicitly
+registry=https://registry.npmjs.org/
+
+# Vercel-compatible settings
+shamefully-hoist=false
+node-linker=isolated
