vercel json must've broken

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,10 @@
 {
   "buildCommand": "cd papers2code-ui && npm install && npm run build",
   "outputDirectory": "papers2code-ui/dist",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(favicon|web-icon)\\.(png|svg|ico)",
-      "dest": "/$1.$2"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
