--- a/papers2code-ui/package.json
+++ b/papers2code-ui/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
