attempting to do docker

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,42 @@
 # ============================================
 # Papers2Code - Environment Variables Template
 # ============================================
-# Copy this file to .env and fill in your values
-# NEVER commit .env files to version control
+# Copy this file to .env, .env.dev, or .env.production and fill in your values
+# NEVER commit .env files with real credentials to version control
 # ============================================
 
 # ---------------------------------------------
 # Application Environment
 # ---------------------------------------------
-# Options: DEV, DEVELOPMENT, production
+# Options: DEV, DEVELOPMENT, PROD_TEST, PRODUCTION
 ENV_TYPE=DEV
 
 # Application logging level
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
-APP_LOG_LEVEL=INFO
+APP_LOG_LEVEL=DEBUG
 
 # ---------------------------------------------
 # Database Configuration
 # ---------------------------------------------
-# MongoDB connection strings for different environments
-# Local: mongodb://localhost:27017/papers2code
-# Atlas: mongodb+srv://username:password@cluster.mongodb.net/papers2code
+# Set both dev and prod URIs - ENV_TYPE automatically selects which one to use
+# Just change ENV_TYPE to switch between environments!
 
-# Development database
+# Development database (used when ENV_TYPE=DEV or ENV_TYPE=DEVELOPMENT)
 MONGO_URI_DEV=mongodb://localhost:27017/papers2code_dev
+# Or use MongoDB Atlas for dev:
+# MONGO_URI_DEV=mongodb+srv://user:pass@test-cluster.mongodb.net/papers2code_test?retryWrites=true&w=majority
 
-# Development environment (alternative)
-MONGO_URI_DEVELOPMENT=mongodb://localhost:27017/papers2code_dev
+# Production database (used when ENV_TYPE=PRODUCTION)
+MONGO_URI_PROD=mongodb+srv://user:pass@prod-cluster.mongodb.net/papers2code?retryWrites=true&w=majority
 
-# Production database (DO NOT USE LOCAL VALUES IN PRODUCTION)
-MONGO_URI_PROD=
+# Production test database (used when ENV_TYPE=PROD_TEST)
+MONGO_URI_PROD_TEST=mongodb+srv://user:pass@test-cluster.mongodb.net/papers2code_test?retryWrites=true&w=majority
 
-# Production test database
-MONGO_URI_PROD_TEST=
-
-# Main connection string (used by deployment)
-MONGO_CONNECTION_STRING=mongodb://localhost:27017/papers2code
-
-# MongoDB performance settings
+# MongoDB connection pool settings
 MONGO_MAX_POOL_SIZE=50
 MONGO_MIN_POOL_SIZE=5
+
+# MongoDB query optimization
 ENABLE_QUERY_HINTS=True
 OPTIMIZE_COUNT_QUERIES=True
 
@@ -54,119 +51,138 @@ FLASK_SECRET_KEY=your-secret-key-here-generate-with-secrets-module
 ALGORITHM=HS256
 
 # Token expiration times (in minutes)
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_MINUTES=10080
+ACCESS_TOKEN_EXPIRE_MINUTES=1440  # 24 hours (dev) or 30 (prod)
+REFRESH_TOKEN_EXPIRE_MINUTES=10080  # 7 days
+
+# Token encryption (REQUIRED for security)
+TOKEN_ENCRYPTION_KEY=your-token-encryption-key-here-generate-with-secrets-module
+
+# ---------------------------------------------
+# OAuth Configuration - Auto-Detection
+# ---------------------------------------------
+# NOTE: USE_DEX_OAUTH is auto-configured based on ENV_TYPE:
+#   DEV/DEVELOPMENT → USE_DEX_OAUTH=true (uses Dex mock OAuth)
+#   PROD_TEST/PRODUCTION → USE_DEX_OAUTH=false (uses real GitHub/Google)
+# To override, explicitly set: USE_DEX_OAUTH=true or USE_DEX_OAUTH=false
+
+# Dex OpenID Connect (Mock OAuth for Development)
+DEX_ISSUER_URL=http://localhost:5556/dex
+DEX_CLIENT_ID=papers2code-backend
+DEX_CLIENT_SECRET=dev-client-secret-change-in-production
 
 # ---------------------------------------------
 # GitHub OAuth Configuration
 # ---------------------------------------------
-# Create OAuth app at: https://github.com/settings/applications/new
-# Homepage URL: http://localhost:5173 (dev) or https://your-domain.com (prod)
-# Callback URL: http://localhost:5173/auth/github/callback (dev)
+# Leave empty to use Dex mock OAuth (recommended for dev)
+# Fill in for production or to test real GitHub OAuth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
-GITHUB_CLIENT_ID=your-github-oauth-client-id
-GITHUB_CLIENT_SECRET=your-github-oauth-client-secret
+# GitHub owner username
+OWNER_GITHUB_USERNAME=your-github-username
 
-# Optional: Override default GitHub OAuth URLs
+# Optional: Override default GitHub OAuth URLs (rarely needed)
 # GITHUB_AUTHORIZE_URL=https://github.com/login/oauth/authorize
 # GITHUB_ACCESS_TOKEN_URL=https://github.com/login/oauth/access_token
-# GITHUB_API_USER_URL=https://api.github.com/user
-# GITHUB_SCOPE=user:email
-
-# Owner GitHub username (for admin features)
-OWNER_GITHUB_USERNAME=your-github-username
+# GITHUB_USER_API_URL=https://api.github.com/user
 
 # ---------------------------------------------
 # Google OAuth Configuration
 # ---------------------------------------------
-# Create OAuth app at: https://console.cloud.google.com/apis/credentials
-# Authorized JavaScript origins: http://localhost:5173 (dev) or https://your-domain.com (prod)
-# Authorized redirect URIs: http://localhost:5000/api/auth/google/callback (dev)
+# Leave empty to use Dex mock OAuth (recommended for dev)
+# Fill in for production or to test real Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-GOOGLE_CLIENT_ID=your-google-oauth-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
-
-# Optional: Override default Google OAuth URLs
+# Optional: Override default Google OAuth URLs (rarely needed)
 # GOOGLE_AUTHORIZE_URL=https://accounts.google.com/o/oauth2/v2/auth
-# GOOGLE_ACCESS_TOKEN_URL=https://oauth2.googleapis.com/token
-# GOOGLE_API_USER_URL=https://www.googleapis.com/oauth2/v2/userinfo
-# GOOGLE_SCOPE=openid email profile
+# GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
+# GOOGLE_USER_INFO_URL=https://www.googleapis.com/oauth2/v2/userinfo
 
 # ---------------------------------------------
-# Token Encryption (Security)
+# Frontend & Backend URLs
 # ---------------------------------------------
-# Encrypt GitHub access tokens at rest in MongoDB
-# Generate key with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
-TOKEN_ENCRYPTION_KEY=your-generated-fernet-key-here-REQUIRED-FOR-SECURITY
-
-# ---------------------------------------------
-# Frontend Configuration
-# ---------------------------------------------
-# Frontend URL for CORS and OAuth redirects
-# IMPORTANT: Also used for backend origin validation in production
-# Backend API will only accept requests from this origin to prevent abuse
 FRONTEND_URL=http://localhost:5173
-
-# Backend API port
-PORT=5000
+BACKEND_URL=http://localhost:5000
 
 # ---------------------------------------------
-# Email Configuration (Optional)
+# Email Configuration
 # ---------------------------------------------
-# For author outreach features (currently manual)
-OUTREACH_EMAIL_ADDRESS=your-email@example.com
+# SendGrid API key for email delivery
+SENDGRID_API_KEY=
+
+# Email sender address
+EMAIL_FROM=noreply@papers2code.com
+
+# Enable/disable email sending (false in dev, true in prod)
+EMAIL_ENABLED=false
+
+# Email rate limiting
+EMAIL_RATE_LIMIT_PER_HOUR=10
+EMAIL_RATE_LIMIT_PER_DAY=50
 
 # ---------------------------------------------
-# Atlas Search Configuration (MongoDB Atlas)
+# External APIs
 # ---------------------------------------------
-# Atlas full-text search settings
-ATLAS_SEARCH_INDEX_NAME=papers_index
-ATLAS_SEARCH_SCORE_THRESHOLD=0.5
-ATLAS_SEARCH_OVERALL_LIMIT=100
-ATLAS_SEARCH_TITLE_BOOST=3.0
+# arXiv API endpoint
+ARXIV_API_URL=https://your-endpoint.free.beeceptor.com/arxiv
 
 # ---------------------------------------------
-# Performance & Caching (Optional)
+# Redis Cache Configuration (Optional)
 # ---------------------------------------------
-# Redis cache configuration for production
-# ENABLE_CACHE=False
-# REDIS_URL=redis://localhost:6379/0
-# CACHE_TTL=300
-# CACHE_KEY_PREFIX=papers2code
-# REDIS_MAX_CONNECTIONS=20
-# REDIS_SOCKET_KEEPALIVE=True
+# Leave empty to use in-memory caching
+# Example formats:
+#   Local: redis://localhost:6379/0
+#   Cloud: redis://username:password@host:port/db
+#   SSL: rediss://username:password@host:port/db
+REDIS_URL=
+ENABLE_CACHE=True
+CACHE_TTL=300
+CACHE_KEY_PREFIX=papers2code_dev
+REDIS_MAX_CONNECTIONS=20
+REDIS_SOCKET_KEEPALIVE=True
 
 # Paper transformation settings
 PAPER_TRANSFORM_BATCH_SIZE=20
 
 # ---------------------------------------------
-# Voting & Moderation Thresholds
+# Atlas Search Settings (Optional - for MongoDB Atlas)
 # ---------------------------------------------
-# Number of votes needed to confirm implementability status
-NOT_IMPLEMENTABLE_CONFIRM_THRESHOLD=3
-IMPLEMENTABLE_CONFIRM_THRESHOLD=2
+ATLAS_SEARCH_INDEX_NAME=papers_index
+ATLAS_SEARCH_SCORE_THRESHOLD=0.5
+ATLAS_SEARCH_OVERALL_LIMIT=2400
+ATLAS_SEARCH_TITLE_BOOST=3.0
 
 # ---------------------------------------------
-# LLM Annotation (Optional - for scripts)
+# Feature Flags
 # ---------------------------------------------
-# For running LLM annotation scripts
-# LLM_PROVIDER=gemini
-# GOOGLE_API_KEY=your-google-api-key
-# OPENAI_API_KEY=your-openai-api-key
+ENABLE_RATE_LIMITING=false
+ENABLE_CSRF_PROTECTION=true
+ENABLE_CORS=true
 
 # ---------------------------------------------
-# SECURITY NOTES
+# CORS Settings
 # ---------------------------------------------
-# 1. NEVER commit this file with real values to version control
-# 2. Use strong, randomly generated secrets for FLASK_SECRET_KEY
-# 3. In production, use environment variable management tools:
-#    - Render: Dashboard environment variables
-#    - Railway: `railway variables set KEY=value`
-#    - Vercel: `vercel env add KEY`
-# 4. Rotate secrets regularly (especially after team member changes)
-# 5. Use different secrets for each environment (dev, staging, production)
-# 6. Monitor for exposed secrets using tools like:
-#    - GitHub Secret Scanning
-#    - GitGuardian
-#    - TruffleHog
-# 7. Enable 2FA on all service accounts (GitHub, MongoDB Atlas, etc.)
+# Comma-separated list of allowed origins
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5000,http://localhost:3000
+
+# ---------------------------------------------
+# Logging & Monitoring (Optional)
+# ---------------------------------------------
+# Sentry DSN for error tracking (leave empty in dev)
+SENTRY_DSN=
+
+# Log file location (optional)
+# LOG_FILE=/var/log/papers2code/app.log
+
+# ---------------------------------------------
+# Development-Specific Settings
+# ---------------------------------------------
+# Enable debug endpoints (DO NOT enable in production)
+DEBUG_ENDPOINTS_ENABLED=false
+
+# Hot reload for development
+HOT_RELOAD=false
+
+# Detailed error messages (DO NOT enable in production)
+SHOW_ERROR_DETAILS=false
