github dev client

--- a/.env.example
+++ b/.env.example
@@ -73,8 +73,13 @@ DEX_CLIENT_SECRET=dev-client-secret-change-in-production
 # ---------------------------------------------
 # GitHub OAuth Configuration
 # ---------------------------------------------
+# Development credentials (used when ENV_TYPE=DEV/DEVELOPMENT)
+# These are automatically used in development mode
+GITHUB_CLIENT_ID_DEV=
+GITHUB_CLIENT_SECRET_DEV=
+
+# Production credentials (used when ENV_TYPE=PROD_TEST/PRODUCTION)
 # Leave empty to use Dex mock OAuth (recommended for dev)
-# Fill in for production or to test real GitHub OAuth
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
