trying to improve docker + dev also connecting to dev backend properly

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # ============================================
 # Papers2Code - Environment Variables Template
 # ============================================
-# Copy this file to .env, .env.dev, or .env.production and fill in your values
+# Copy this file to .env and fill in your values
 # NEVER commit .env files with real credentials to version control
 # ============================================
 
@@ -25,12 +25,17 @@ APP_LOG_LEVEL=DEBUG
 MONGO_URI_DEV=mongodb://localhost:27017/papers2code_dev
 # Or use MongoDB Atlas for dev:
 # MONGO_URI_DEV=mongodb+srv://user:pass@test-cluster.mongodb.net/papers2code_test?retryWrites=true&w=majority
+MONGO_DB_NAME_DEV=papers2codedev
 
 # Production database (used when ENV_TYPE=PRODUCTION)
 MONGO_URI_PROD=mongodb+srv://user:pass@prod-cluster.mongodb.net/papers2code?retryWrites=true&w=majority
+# Optional override (falls back to the database portion of URI if omitted)
+# MONGO_DB_NAME_PROD=papers2code
 
 # Production test database (used when ENV_TYPE=PROD_TEST)
 MONGO_URI_PROD_TEST=mongodb+srv://user:pass@test-cluster.mongodb.net/papers2code_test?retryWrites=true&w=majority
+# Optional override
+# MONGO_DB_NAME_PROD_TEST=papers2code_test
 
 # MongoDB connection pool settings
 MONGO_MAX_POOL_SIZE=50
