--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   # Note: MongoDB is now external (MongoDB Atlas or remote server)
-  # The local mongodb service has been removed - using MONGO_URI_DEV from .env.dev
+  # The local mongodb service has been removed - using MONGO_URI_DEV from .env
   
   # Dex OIDC provider for development OAuth
 
@@ -30,13 +30,13 @@ services:
     volumes:
       - ./papers2code_app2:/app/papers2code_app2
       - ./scripts:/app/scripts
-      - ./.env.dev:/app/.env:ro
+      - ./.env:/app/.env:ro
     environment:
       - ENV_TYPE=DEV
       - DEX_ISSUER_URL=http://dex:5556/dex
       - DEX_CLIENT_ID=papers2code-backend
       - DEX_CLIENT_SECRET=dev-client-secret-change-in-production
-      # MONGO_URI_DEV loaded from .env.dev - auto-selected based on ENV_TYPE
+      # MONGO_URI_DEV loaded from .env - auto-selected based on ENV_TYPE
     depends_on:
       - dex
     networks:
