--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    gcc \
+    gcc curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Install uv
@@ -22,7 +22,7 @@ COPY papers2code_app2 ./papers2code_app2
 COPY scripts ./scripts
 COPY run_app2.py ./
 
-EXPOSE 5000
+EXPOSE 5001
 
 # Default command (can be overridden in docker-compose)
-CMD ["uvicorn", "papers2code_app2.main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
+CMD ["uvicorn", "papers2code_app2.main:app", "--host", "0.0.0.0", "--port", "5001", "--reload"]
