--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,19 +4,30 @@ services:
   # Note: MongoDB is now external (MongoDB Atlas or remote server)
   # The local mongodb service has been removed - using MONGO_URI_DEV from .env
 
-  # Dex OIDC provider for development OAuth
-
-  # Dex - OpenID Connect Provider (Mock OAuth)
-  dex:
-    image: ghcr.io/dexidp/dex:v2.44.0
-    container_name: papers2code_dev_dex
+  # Keycloak - OpenID Connect Provider (Mock GitHub/Google OAuth with self-registration)
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.0
+    container_name: papers2code_dev_keycloak
     ports:
-      - "5556:5556"
+      - "8080:8080"
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_HEALTH_ENABLED=true
+      - KC_HTTP_RELATIVE_PATH=/
     volumes:
-      - ./dev-config/dex-config.yaml:/etc/dex/config.yaml:ro
-    command: [ "dex", "serve", "/etc/dex/config.yaml" ]
+      - ./dev-config/keycloak:/opt/keycloak/data/import:ro
+    command: 
+      - start-dev
+      - --import-realm
     networks:
       - papers2code_dev
+    healthcheck:
+      test: ["CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/8080;echo -e 'GET /health/ready HTTP/1.1\r\nhost: localhost\r\nConnection: close\r\n\r\n' >&3;if [ $? -eq 0 ]; then echo 'Healthcheck Successful';exit 0;else echo 'Healthcheck Failed';exit 1;fi;"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   # Backend API
   backend:
@@ -32,12 +43,19 @@ services:
       - ./.env:/app/.env:ro
     environment:
       - ENV_TYPE=DEV
-      - DEX_ISSUER_URL=http://dex:5556/dex
-      - DEX_CLIENT_ID=papers2code-backend
-      - DEX_CLIENT_SECRET=dev-client-secret-change-in-production
+      - USE_DEX_OAUTH=true
+      # Mock GitHub OAuth (Keycloak)
+      - KEYCLOAK_GITHUB_ISSUER_URL=http://keycloak:8080/realms/mock-github
+      - KEYCLOAK_GITHUB_CLIENT_ID=papers2code-github
+      - KEYCLOAK_GITHUB_CLIENT_SECRET=dev-github-secret
+      # Mock Google OAuth (Keycloak)
+      - KEYCLOAK_GOOGLE_ISSUER_URL=http://keycloak:8080/realms/mock-google
+      - KEYCLOAK_GOOGLE_CLIENT_ID=papers2code-google
+      - KEYCLOAK_GOOGLE_CLIENT_SECRET=dev-google-secret
       # MONGO_URI_DEV loaded from .env - auto-selected based on ENV_TYPE
-      # depends_on:
-      #   - dex
+    depends_on:
+      keycloak:
+        condition: service_healthy
     networks:
       - papers2code_dev
     command: uvicorn papers2code_app2.main:app --host 0.0.0.0 --port 5001 --reload
