--- a/.env.example
+++ b/.env.example
@@ -115,6 +115,12 @@ GOOGLE_CLIENT_SECRET=
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:5001
 
+# API_URL is used for OAuth redirect_uri construction in production
+# CRITICAL: Set this to your actual production backend URL (with https://)
+# Example: API_URL=https://papers2code.onrender.com
+# If not set, defaults to http://localhost:5001
+API_URL=http://localhost:5001
+
 # ---------------------------------------------
 # Email Configuration
 # ---------------------------------------------
